<resources>
    <string name="app_name">Tonda Kumwanya</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="alert_title_connectionError">Connection Error</string>
    <string name="alert_msg_connectionError">Please connect with active network connection and Try again.</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_rate_us">RATE US</string>
    <string name="title_alert_confirm_logout">Logout</string>
    <string name="msg_alert_confirm_logout">Are you sure want to Logout from application?</string>
    <string name="action_yes">YES</string>
    <string name="title_alert">Alert</string>
    <string name="msg_enter_company_code">Enter Company Code</string>
    <string name="alert_title_delete_location">Delete</string>
    <string name="alert_message_delete_location">Please make sure there is no any employee mapped with this branch.Otherwise application start misbehaving. \n\nAre you sure to delete this Branch?</string>
    <string name="alert_title_delete_person">Delete</string>
    <string name="alert_message_delete_person">Once you delete this employee,all his/her attendance details getting erased.\n\nAre you sure to delete this employee?</string>
    <string name="action_no">NO</string>
    <string name="alert_title_mark_attendance">Mark Attendance</string>
    <string name="alert_message_mark_attendance">Are you sure to upload attendance entry?</string>
    <string name="action_update">UPDATE</string>
    <string name="label_absent_day">Absent Day</string>
    <string name="label_non_working_day">Non Working Day</string>
    <string name="label_public_holiday">Public Holiday</string>
    <string name="label_out_pending">No Punch-Out</string>
    <string name="label_full_days">Present Day</string>
    <string name="label_half_days">Half Day</string>
    <string name="label_present_but_leave">Present But Absent</string>
    <string name="label_working_hours">Working Hours</string>
    <string name="label_valid_present_days">Valid Present Days</string>
    <string name="msg_all_fields_required">All fields are required.</string>
    <string name="msg_enter_valid_latitude">Enter valid latitude.</string>
    <string name="enter_valid_longitude">Enter valid longitude.</string>
    <string name="msg_enter_proper_address">Enter proper address.</string>
    <string name="msg_location_added_successfully">Branch added successfully.</string>
    <string name="msg_location_deleted_successfully">Branch deleted successfully.</string>
    <string name="msg_location_updated_successfully">Branch updated successfully.</string>
    <string name="alert_title_change_password">Change Password</string>
    <string name="alert_title_update_location">Update Branch</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_address">Address</string>
    <string name="hint_branch_code">Branch Code</string>
    <string name="msg_no_location_added_yet">NO BRANCH ADDED.\nADD YOUR COMPANY BRANCHES FIRST.</string>
    <string name="sub_title_person_information">Employee Information</string>
    <string name="sub_title_work_type">Work Type</string>
    <string name="hint_person_name">Employee Name</string>
    <string name="hint_person_address">Employee Address</string>
    <string name="hint_mobile_no">Mobile No</string>
    <string name="hint_designation_exe_worker_manager">Designation (Exe.Employees,Manager)</string>
    <string name="label_day_wise">Daily</string>
    <string name="label_hour_wise">Hourly</string>
    <string name="label_full_day_hours">Full Day Hours</string>
    <string name="label_half_day_hours">Half Day Hours</string>
    <string name="label_consider_as_leave_if_user_leave_before">Application will start misbehaves if you change already set working hours. You can change working hours only in-case employee has not marked any attendance till yet.</string>
    <string name="label_full_day_amount">Full Day Amount</string>
    <string name="label_half_day_amount">Half Day Amount</string>
    <string name="label_per_hours_amount">Per Hours Amount</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_currency_symbol">Currency Symbol</string>
    <string name="msg_enter_valid_mobile_no">Enter valid mobile no.</string>
    <string name="msg_map_location_with_person">Please map branch.</string>
    <string name="msg_enter_valid_amount">Enter valid amount.</string>
    <string name="msg_enter_valid_amount_per_hour">Enter valid Per Hour amount.</string>
    <string name="msg_person_detail_updated_successfully">Employee details updated successfully.\n\nPlease share required details to \'%1$s\'. So he/she can start using application.</string>
    <string name="msg_person_added_successfully">Employee added successfully.\n\nPlease share required details to \'%1$s\'. So he/she can start using application.</string>
    <string name="msg_person_deleted_successfully">Employee deleted successfully.</string>
    <string name="frag_attendance_punch_in_now">Punch In Now</string>
    <string name="frag_attendance_punch_out_now">Punch Out Now</string>
    <string name="frag_attendance_good_bye">Good Bye</string>
    <string name="frag_attendance_today">Today</string>
    <string name="frag_attendance_in_time">IN TIME</string>
    <string name="frag_attendance_out_time">OUT TIME</string>
    <string name="frag_attendance_default_time">00:00:00 AM</string>
    <string name="msg_requirement_of_location_permission">Application requires location permission to find your current location.Kindly allow permission.</string>
    <string name="label_location_accuracy">%1$f meters accurate</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="hint_radius_in_meters">Radius in meters</string>
    <string name="helper_text_radius">Set radius between 150 m to 1000 m.By setting radius, employee can mark attendance inside this set radius only.</string>
    <string name="msg_enter_valid_radius">Radius must be between 150 m to 1000 m.</string>
    <string name="label_date">DATE</string>
    <string name="label_days">DAYS</string>
    <string name="label_duration">DURATION</string>
    <string name="label_type">TYPE</string>
    <string name="btn_calculate_amount">CALCULATE AMOUNT</string>
    <string name="day_type_leave">Leave</string>
    <string name="day_type_half_day">Half Day</string>
    <string name="day_type_full_day">Full Day</string>
    <string name="hint_email_id">Email Id</string>
    <string name="hint_date_of_birth">Date Of Birth</string>
    <string name="hint_password">Password</string>
    <string name="hint_branch_name">Branch Name</string>
    <string name="msg_enter_valid_email_id">Enter valid email id.</string>
    <string name="hint_mobile_no_or_email_id">Email Id</string>
    <string name="hint_new_password">New Password</string>
    <string name="msg_enter_password">Enter password.</string>
    <string name="action_change">CHANGE</string>
    <string name="sub_title_terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="sub_title_tips">Tips</string>
    <string name="sub_title_how_to_use_app">How To Use App?</string>
    <string name="label_privacy_policy"><![CDATA[<ol><li>Make daily attendance entries(Punch In &amp; Punch Out) to get perfect result.<hr /></li><li>Employee Attendance application store application data on Firebase server.<hr /></li><li>Employee Attendance application not fetch any of your personal information in background.Feel free!!!<hr /></li><li>We are not responsible for lose of data in case any issue comes by Firebase server.<hr /></li><li>Keep Employee Attendance application up to date to enjoy new features.</li></ol>]]></string>
    <string name="label_application_use"><![CDATA[<p><strong>1) Register Company.</strong></p><hr /><p>&nbsp;<strong>2) Admin</strong></p><ol><li>Create Admin Account.<br />(Note: There is only one admin exists per company).<hr /></li><li>Add Your Company Branches.<hr /></li><li>Add Branch Wise Public Holidays(Optional).<hr /></li><li>Add Employee, Map Company Branch In Which Employees Works, Set Working Time Slots, Map Company Branches(Geo-fences) &amp; Android Phone.<hr /></li><li>View Present Employees.<hr /></li><li>Check Employees Attendances &amp; Calculate Salary and Send Salary Slip.<hr /></li><li>Check Employee Reports.<hr /></li><li>Approve Phone Mapping Requests.<hr /></li><li>View Work Done Task By Employees.<hr /></li><li>Brodcast Message To All Employees.<hr /></li><li>Common Notes.&nbsp;</li></ol><hr /><p><strong>3) Employee</strong></p><ol><li>Do Login Using Credential Provided By Admin Person(Via Mail or SMS).<hr /></li><li>Send Phone Mapping Request(If required).<hr /></li><li>Mark Daily Attendance Regularly.<hr /></li><li>Check Attendance History.<hr /></li><li>Add Daily Work Done Task.<hr /></li><li>View Common Notes.</li></ol>]]></string>
    <string name="label_tips_one"><b>Active Internet Connection</b>\n\nAs Employee Attendance application totally work online so please use application with active internet connection only.</string>
    <string name="label_tips_two"><b>Require GPS Enable</b>\n\nApplication requires your location to detect whether you are inside Geo-fence or not.So enable GPS first while using application for better performance.</string>
    <string name="alert_title_information">Information</string>
    <string name="action_got_it">GOT IT</string>
    <string name="alert_message_info_for_mark_attendance_from_geofence"><![CDATA[<b>Make GPS Enable</b><br>Enable GPS first before open application for better result.Specially for Mark Attendance.</br><br></br><br><b>Location Not Getting Resolved</b></br><br>Make sure you have enabled GPS and you are finding location from Open area.If all conditions are satisfied then open your default Google Map and check for location.If Google map also provide wrong location then restart your mobile device.</br><br></br><br><b>When should Mark Punch In/Out?</b></br><br>When Red color balloon(shown below Timer) turns into Green color at that time you are allowed to mark Punch In/Out.Means your current location(Blue dot on map) come inside Red Circle on map(Your mapped location) at that time you are allowed to mark Punch In/Out.</br>]]></string>
    <string name="alert_message_info_for_mark_attendance_from_anywhere"><![CDATA[<b>Make GPS Enable</b><br>Enable GPS first before open application for better result.Specially for Mark Attendance.</br><br></br><br><b>Location Not Getting Resolved</b></br><br>Make sure you have enabled GPS and you are finding location from Open area.If all conditions are satisfied then open your default Google Map and check for location.If Google map also provide wrong location then restart your mobile device.</br><br></br><br><b>When should Mark Punch In/Out?</b></br><br>When location accuracy(shown in Orange color) come inside 100 meters at that time you should have to mark your Punch In/Out.</br>]]></string>
    <string name="label_welcome">Welcome to,</string>
    <string name="label_rbpessacash">RBPESSACASH (0233)</string>
    <string name="btn_admin">Admin</string>
    <string name="btn_employee">Employee</string>
    <string name="label_create_account">CREATE ADMIN ACCOUNT</string>
    <string name="title_account_verification">ACCOUNT\nVERIFICATION</string>
    <string name="label_dont_have_admin_account">Don\'t have Admin account yet?</string>
    <string name="label_forgot_credentials">Forgot?</string>
    <string name="label_show_password">Show Password</string>
    <string name="label_enter_credentials">Enter your Credentials to continue with us</string>
</resources>