<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimen_ten"
    android:paddingTop="@dimen/dimen_five"
    android:paddingRight="@dimen/dimen_ten"
    android:paddingBottom="@dimen/dimen_five">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_mobile_no"
            style="@style/customEditText"
            android:backgroundTint="#FFFFFF"
            android:drawableEnd="@drawable/ic_email_accent_24dp"
            android:drawableRight="@drawable/ic_email_accent_24dp"
            android:drawablePadding="@dimen/dimen_five"
            android:hint="@string/hint_mobile_no_or_email_id"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:outlineProvider="background"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/colorSecondaryText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/customEditText"
            android:backgroundTint="#FFFFFF"
            android:drawableEnd="@drawable/ic_lock_accent_24dp"
            android:drawableRight="@drawable/ic_lock_accent_24dp"
            android:drawablePadding="@dimen/dimen_five"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:button="@drawable/check_box_selector"
            android:buttonTint="#FFFFFF"
            android:text="@string/label_show_password"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dimen_Value"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_credentials"
            style="@style/customTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:text="@string/label_forgot_credentials"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="@dimen/dimen_Value"
            tools:ignore="RelativeOverlap,RtlSymmetry" />
    </RelativeLayout>
</LinearLayout>

