<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFE0"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_login"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/horizontal2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:gravity="center"
            android:padding="10px"
            android:text="@string/title_account_verification"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/horizontal0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontal0" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/left"
            app:layout_constraintRight_toRightOf="@+id/right"
            app:layout_constraintTop_toBottomOf="@+id/horizontal1">

            <com.github.florent37.shapeofview.shapes.DiagonalView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:elevation="4dp"
                app:shape_diagonal_angle="-5"
                app:shape_diagonal_position="bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#33000000"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="#80000000"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_weight="0"
                            android:adjustViewBounds="true"
                            android:background="@drawable/circle_corner"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/img_module_user_profile"
                            tools:srcCompat="@drawable/img_module_user_profile" />

                        <LinearLayout
                            android:layout_width="304dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/customTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_welcome"
                                android:textColor="@color/fontWhiteEnable"
                                android:textSize="@dimen/dimen_Value" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/customTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dimen_five"
                                android:text="@string/label_rbpessacash"
                                android:textColor="@color/fontWhiteEnable"
                                android:textSize="@dimen/dimen_large" />
                        </LinearLayout>

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/customTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:padding="15dp"
                        android:text="@string/label_enter_credentials"
                        android:textColor="@color/fontWhiteEnable"
                        android:textSize="@dimen/dimen_Value" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="false"
                        android:layout_marginTop="120dp"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_admin"
                                style="@style/customTextView"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:background="@drawable/left_selected"
                                android:gravity="center"
                                android:text="@string/btn_admin"
                                android:textColor="@android:color/white" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_employee"
                                style="@style/customTextView"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:background="@drawable/right_unselected"
                                android:gravity="center"
                                android:text="@string/btn_employee"
                                android:textColor="@android:color/black" />

                        </LinearLayout>

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <FrameLayout
                                android:id="@+id/fl_container"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical" />
                        </ScrollView>


                    </LinearLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_verify_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="16dp"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/ic_tick_24dp" />

                </RelativeLayout>
            </com.github.florent37.shapeofview.shapes.DiagonalView>

            <com.github.florent37.shapeofview.shapes.DiagonalView
                android:id="@+id/dv_create_admin_account"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="4dp"
                android:visibility="invisible"
                app:shape_diagonal_angle="5"
                app:shape_diagonal_position="top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/customTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_ten"
                        android:text="@string/label_dont_have_admin_account"
                        android:textColor="@color/colorPrimaryText" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_label"
                        style="@style/customTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_five"
                        android:textColor="@color/colorPrimaryText" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_create_admin_account"
                        style="@style/customButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_ten"
                        android:text="@string/label_create_account" />


                </LinearLayout>
            </com.github.florent37.shapeofview.shapes.DiagonalView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fl_container_"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" />

</FrameLayout>